# ai-image-detector-comparison

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: task-template.md
decision-records/: ai-image-dataset.md
notebooks/: CIFAKE AI generated image detection ViT.ipynb  dataset_test.ipynb  install_dataset.ipynb  preprocessing.ipynb  readme.md
notebooks/results_functions/: evaluations.ipynb
report/: README.md  Report- Approach_v0.1.docx
slides/: README.md
