[project]
name = "ai-image-detector-comparison"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Gatabi",email = "name@rub.de"},
    {name = "Kirill Salfetnik",email = "name@rub.de"},
    {name = "Joshua Hertz-Eichenrode",email = "joshua.hertz-eichenrode@rub.de"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

